cmip5/log.nc2one.wrap.rcp.txt
  File "./nc2one.wrap.py", line 6
    -------
          ^
SyntaxError: invalid syntax
